2006-09-11  Ross Burton  <ross@burtonini.com>

	* src/actions.[ch]:
	* src/parser.c:
	Add unmaximise action (thanks Alex Menk).

2006-08-06  Ross Burton  <ross@burtonini.com>

	* src/xutils.c:
	Generalise my_wnck_get_string_property_latin1() to handle atoms,
	and coerce them to strings as required.

	* src/matchers.[ch]:
	* src/parser.c:
	Add window_property action to return the value of an arbitrary
	property on the window.

	Patch from Nigel Tao (#348378).

2006-07-04  Ross Burton  <ross@burtonini.com>

	* src/actions.[ch]:
	* src/parser.c:
	Add sticky action (#345902, Steve Leung)

2006-06-04  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	Fix (geometry) to handle negative offsets (#330067, Vincent Ho and
	Midred)

2006-05-22  Ross Burton  <ross@burtonini.com>

	* src/action.[ch]:
	* src/parser.c:
	Add unminimise action (thanks to Richard Neill)

2006-04-18  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	* src/actions.h:
	* src/parser.c:
	Port the opacity action (thanks to Pavel Palat)

2006-03-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.17.1.

2006-03-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Depend on GLib 2.9.1 onwards for GSlice.

2006-03-06  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.17.

2006-03-06  Ross Burton  <ross@burtonini.com>

	* src/e-sexp.h:
	* src/e-sexp.c:
	Port to use GSlice rather than GMemChunk.

2005-11-02  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.16.

2005-10-21  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	Fix undecorate action (Mikachu).

2005-10-20  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	Handle OpenBox specially when undecorating.

2005-10-20  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.15.

2005-10-20  Ross Burton  <ross@burtonini.com>

	* src/matchers.c:
	Protect against returning NULL, return empty string instead.

2005-10-19  Ross Burton  <ross@burtonini.com>
